--- a/src/_styles/base.styl
+++ b/src/_styles/base.styl
@@ -28,7 +28,7 @@ body {
   background: white;
   width: 100%;
   height: calc(100vh - 50px);
-  overflow: scroll;
+  // overflow: scroll;
 } 
 .ContentContainer.Active {
   z-index: 800;
